# langgraph-bootcamp

./: .env.example  .gitignore  JOURNAL.md  README.md  pyproject.toml  requirements.txt
.idx/: dev.nix
Notebooks/: 10_Genarator_Evaluator.ipynb  11_Memory.ipynb  12_HumanInLoop.ipynb  1_basics.ipynb  2_Pydantic.ipynb  3_messages.ipynb  4_Prompts&Chains.ipynb  5_Tools&Binding.ipynb  6_ReAct.ipynb  7_Parallelization.ipynb  8_Router.ipynb  9_Orchestrator_Worker copy.ipynb
