[project]
name = "langgraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=4.0.0",
    "ddgs>=9.14.4",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-google>=0.1.1",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "pip>=26.1.2",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "wikipedia>=1.4.0",
]
